adding new option

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -14,5 +14,6 @@
       <td><%= link_to 'Show', page_path(page) %></td>
     </tr>
   <% end %>
+  <%= @pages.length%>
 </table>
 <%= link_to 'New', new_page_path %>
