adding the new show UI

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,24 +1,7 @@
-<h1>Listing Pages</h1>
-
-<table>
-  <tr>
-    <th>Title</th>
-    
-    <th></th>
-  </tr>
- 
-  <% @pages.each do |page| %>
-    <tr>
-      <td><%= page.title %></td>
-      
-      <td><%= link_to 'Show', page_path(page) %></td>
-    </tr>
-  <% end %>
-  <%= @pages.length%>
-</table>
 <%= link_to 'New', new_page_path %>
 
 <%= link_to 'Back', pages_path %>
+
 <html>
   <head>
     <title>Wira</title>
@@ -41,6 +24,7 @@
       
     <div class="container">
       <center>
+        <%= "#{@pages.length} blinks"%>
       <h1><%=@time%></h1>
       <a href="/video"><input class="btn btn-light" id="button1" type="button" value="Turn on Kitchen Light"></a>
       <p></p>
@@ -55,7 +39,9 @@
   </body>
   <script>
     var count= 0;
+    var prev = 0;
     function myFunction() {
+      console.log("here");
       count++;
       if(count>1){
         document.getElementById("demo").innerHTML = "Simulating "+count+" blinks";
@@ -65,26 +51,48 @@
       }
       var i;
       for(i =1; i<=4; i++){
-        // console.log("i");
         document.getElementById("button"+i).className = "btn btn-light";
-        // document.getElementById("button"+i).className = "btn btn-light";
       }
-        // console.log("i");
+        
         document.getElementById("button"+((count-1)%4+1)).className = "btn btn-dark";
         document.getElementById("actual").innerHTML = "Selecting: "+document.getElementById("button"+((count-1)%4+1)).value;
-        // document.getElementById("button"+i).className = "btn btn-light";
-      setTimeout(reset, 2000);
+
+      // to confirm that this is indeed the choice
+      setTimeout(reset, 2500);
     }
 
     function reset(){
-      console.log("resest");
-      
+      console.log("reset");
       document.getElementById("actual").innerHTML = "Final Choice: "+document.getElementById("button"+((count-1)%4+1)).value;
       count = 0;
       document.getElementById("demo").innerHTML = "Simulating "+count+" blinks";
 
     }
-  </script>
 
+    // setTimeout(function(){
+    //   location = '';
+    //   for(i =1; i<=4; i++){
+    //     if(i!= (<%=@pages.length%>)%4+1){
+    //       document.getElementById("button"+i).className = "btn btn-light";
+    //     }
+    //   }
+    //   document.getElementById("button"+((<%=@pages.length%>)%4+1)).className = "btn btn-dark";
+    // }, 1000);
+
+    // auto refresh 
+    // setInterval(function(){
+    //   // location = ''
+      
+    //   var diff = (<%= @pages.length %>)-prev;
+    //   console.log("the diff"+diff);
+    //   if(diff>0){
+    //     prev = <%= @pages.length %>;
+    //   }
+    //   for(i = 0; i<diff; i++){
+    //     myFunction();  
+    //   }
+    // },500); 
+
+  </script>
 </html>
 
