--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,6 +7,9 @@
     <title>Wira</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="/assets/jquery.js" type="text/javascript"></script>
+    <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -24,8 +27,10 @@
       
     <div class="container">
       <center>
-        <%= "#{@pages.length} blinks"%>
+        <%= "#{@pages[-1].title} blinks"%>
       <h1><%=@time%></h1>
+      <%= javascript_pack_tag 'my_js' %>
+
       <a href="/video"><input class="btn btn-light" id="button1" type="button" value="Turn on Kitchen Light"></a>
       <p></p>
       <a href="/preorder"><input class="btn btn-light" id="button2" type="button" value="Lock Front Door"></a>
@@ -37,7 +42,8 @@
       </center>
     </div>
   </body>
-  <script>
+  <script >
+  
     var count= 0;
     var prev = 0;
     function myFunction() {
@@ -71,27 +77,42 @@
 
     // setTimeout(function(){
     //   location = '';
+    //   var posted = <%=@pages[-1].title%>;
+    //   var next = posted.substring(posted.indexOf("|")+1);
     //   for(i =1; i<=4; i++){
-    //     if(i!= (<%=@pages.length%>)%4+1){
+    //     if(i!= parseInt(posted)%4+1){
     //       document.getElementById("button"+i).className = "btn btn-light";
     //     }
     //   }
-    //   document.getElementById("button"+((<%=@pages.length%>)%4+1)).className = "btn btn-dark";
+    //   document.getElementById("button"+(parseInt(posted)%4+1)).className = "btn btn-dark";
+
+    //   //
+    //   if(next === "1"){
+    //     location.href = "new_page_path";
+    //   }
     // }, 1000);
 
     // auto refresh 
-    // setInterval(function(){
-    //   // location = ''
+    setInterval(function(){
+      // location = ''
       
-    //   var diff = (<%= @pages.length %>)-prev;
-    //   console.log("the diff"+diff);
-    //   if(diff>0){
-    //     prev = <%= @pages.length %>;
-    //   }
-    //   for(i = 0; i<diff; i++){
-    //     myFunction();  
-    //   }
-    // },500); 
+      // var diff = (<%= @pages.length %>)-prev;
+      // console.log("the diff"+diff);
+      // if(diff>0){
+      //   prev = <%= @pages.length %>;
+      // }
+      // for(i = 0; i<diff; i++){
+      //   myFunction();  
+      // // }
+      console.log("log");
+      // Rails.ajax({
+      //   url: "/pages",
+      //   type: "get",
+      //   data: "",
+      //   success: function(data) {console.log("this was a success"+data.value);},
+      //   error: function(data) {console.log("this was an error");}
+      // })
+    },2000); 
 
   </script>
 </html>
