--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,9 @@
     <title>Wira</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="/assets/jquery.js" type="text/javascript"></script>
+    <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -20,7 +23,10 @@
       
     <div class="container">
       <center>
-      <h1>Sample UI for Smart Applications</h1>
+      
+      
+      <%= javascript_pack_tag 'my_js' %>
+
       <a href="/video"><input class="btn btn-light" id="button1" type="button" value="Turn on Kitchen Light"></a>
       <p></p>
       <a href="/preorder"><input class="btn btn-light" id="button2" type="button" value="Lock Front Door"></a>
@@ -32,9 +38,14 @@
       </center>
     </div>
   </body>
-  <script>
+  <script >
+  
     var count= 0;
+    var prev = 0;
+    var diff = 0;
+    var current = 0;
     function myFunction() {
+      console.log("here");
       count++;
       if(count>1){
         document.getElementById("demo").innerHTML = "Simulating "+count+" blinks";
@@ -44,25 +55,100 @@
       }
       var i;
       for(i =1; i<=4; i++){
-        // console.log("i");
         document.getElementById("button"+i).className = "btn btn-light";
-        // document.getElementById("button"+i).className = "btn btn-light";
       }
-        // console.log("i");
+        
         document.getElementById("button"+((count-1)%4+1)).className = "btn btn-dark";
         document.getElementById("actual").innerHTML = "Selecting: "+document.getElementById("button"+((count-1)%4+1)).value;
-        // document.getElementById("button"+i).className = "btn btn-light";
-      setTimeout(reset, 2000);
+
+      // to confirm that this is indeed the choice
+      setTimeout(reset, 2500);
     }
 
     function reset(){
-      console.log("resest");
-      
-      document.getElementById("actual").innerHTML = "Final Choice: "+document.getElementById("button"+((count-1)%4+1)).value;
-      count = 0;
+      console.log("reset");
+      document.getElementById("actual").innerHTML = "Final Choice: "+document.getElementById("button"+(((current-prev)-1)%4+1)).value;
       document.getElementById("demo").innerHTML = "Simulating "+count+" blinks";
+      prev = current;
 
     }
-  </script>
 
+    // setInterval(function(){
+    //   document.getElementById("actual").innerHTML = "Final Choice: "+document.getElementById("button"+(((current-prev)-1)%4+1)).value;
+    //   count = 0;
+      
+
+    // }, 4000);
+    // setTimeout(function(){
+    //   location = '';
+    
+    //   var next = posted.substring(posted.indexOf("|")+1);
+    //   for(i =1; i<=4; i++){
+    //     if(i!= parseInt(posted)%4+1){
+    //       document.getElementById("button"+i).className = "btn btn-light";
+    //     }
+    //   }
+    //   document.getElementById("button"+(parseInt(posted)%4+1)).className = "btn btn-dark";
+
+    //   //
+    //   if(next === "1"){
+    //     location.href = "new_page_path";
+    //   }
+    // }, 1000);
+    // setInterval(function(){
+    //   document.getElementById("demo").innerHTML = "Simulating "+(diff)+" blinks";
+    // }, 2500);
+    // auto refresh 
+    setInterval(function(){
+      // location = ''
+      
+      
+      // console.log("the diff"+diff);
+      // if(diff>0){
+      
+      // }
+      // for(i = 0; i<diff; i++){
+      //   myFunction();  
+      // // }
+      // var current = 0;
+      // console.log("log");
+      Rails.ajax({
+        url: "/pages",
+        type: "get",
+        data: "",
+        success: function(data) {console.log(data.blinks);
+          // console.log(prev);
+          current = data.blinks;
+
+          if(prev<current){
+          //     prev = current;
+            // only start simulating button clicks if the user is starting to blink (initial refresh will yield a big diff between prev at 0 and current at 100+)
+            if((current-prev<10)){
+              for(i =1; i<=4; i++){
+                document.getElementById("button"+i).className = "btn btn-light";
+              }
+                
+              document.getElementById("button"+(((current-prev)-1)%4+1)).className = "btn btn-dark";
+            }else{
+              //know at least one diff because prev<current
+              prev = current-1;
+            }
+            // console.log("there was a diff");
+            if(current-prev == 1){
+              setTimeout(reset, 4200);
+            }
+          }
+
+          //get the button highlighted here
+
+        },
+        error: function(data) {console.log("this was an error");}
+      })
+      // console.log("after ajax");
+      // console.log(current);
+      
+    },1000); 
+
+  </script>
 </html>
+
