--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -100,52 +100,41 @@
     // }, 2500);
     // auto refresh 
     setInterval(function(){
-      // location = ''
-      
-      
-      // console.log("the diff"+diff);
-      // if(diff>0){
-      
-      // }
-      // for(i = 0; i<diff; i++){
-      //   myFunction();  
-      // // }
-      // var current = 0;
-      // console.log("log");
-      Rails.ajax({
-        url: "/pages",
-        type: "get",
-        data: "",
-        success: function(data) {console.log(data.blinks);
-          // console.log(prev);
-          current = data.blinks;
+     
+     //TODO: uncomment for actual demo! 
+      // Rails.ajax({
+      //   url: "/pages",
+      //   type: "get",
+      //   data: "",
+      //   success: function(data) {console.log(data.blinks);
+      //     // console.log(prev);
+      //     current = data.blinks;
 
-          if(prev<current){
-          //     prev = current;
-            // only start simulating button clicks if the user is starting to blink (initial refresh will yield a big diff between prev at 0 and current at 100+)
-            if((current-prev<10)){
-              for(i =1; i<=4; i++){
-                document.getElementById("button"+i).className = "btn btn-light";
-              }
+      //     if(prev<current){
+         
+      //       // only start simulating button clicks if the user is starting to blink (initial refresh will yield a big diff between prev at 0 and current at 100+)
+      //       if((current-prev<10)){
+      //         for(i =1; i<=4; i++){
+      //           document.getElementById("button"+i).className = "btn btn-light";
+      //         }
                 
-              document.getElementById("button"+(((current-prev)-1)%4+1)).className = "btn btn-dark";
-            }else{
-              //know at least one diff because prev<current
-              prev = current-1;
-            }
-            // console.log("there was a diff");
-            if(current-prev == 1){
-              setTimeout(reset, 4200);
-            }
-          }
+      //         document.getElementById("button"+(((current-prev)-1)%4+1)).className = "btn btn-dark";
+      //       }else{
+      //         //know at least one diff because prev<current
+      //         prev = current-1;
+      //       }
+      //       // console.log("there was a diff");
+      //       if(current-prev == 1){
+      //         setTimeout(reset, 4200);
+      //       }
+      //     }
 
-          //get the button highlighted here
+      //     //get the button highlighted here
 
-        },
-        error: function(data) {console.log("this was an error");}
-      })
-      // console.log("after ajax");
-      // console.log(current);
+      //   },
+      //   error: function(data) {console.log("this was an error");}
+      // })
+     
       
     },1000); 
 
