--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,28 +13,30 @@
   </head>
   <body>
    
-    <div class="jumbotron text-center">
+   <!--  <div class="jumbotron text-center">
       <h1>Input Simulation</h1>
       <p>Click to simulate number of blinks</p> 
-      <!-- <button type="button" class="btn btn-success">Success</button> -->
+      <button type="button" class="btn btn-success">Success</button>
       <a ><input class="btn btn-info" onClick="myFunction()" type="button" value="Blink"></a>
       <p id="demo"></p>
-    </div>
+    </div> -->
       
-    <div class="container">
+    <div class="container jumbotron text-center">
       <center>
       
-      
-      <%= javascript_pack_tag 'my_js' %>
+        <h1>Choices</h1>
 
-      <a href="/video"><input class="btn btn-light" id="button1" type="button" value="Turn on Kitchen Light"></a>
-      <p></p>
-      <a href="/preorder"><input class="btn btn-light" id="button2" type="button" value="Lock Front Door"></a>
-      <p></p>
-      <a href="/video"><input class="btn btn-light" id="button3" type="button" value="Turn on Heater"></a>
-      <p></p>
-      <a href="/preorder"><input class="btn btn-light" id="button4" type="button" value="Turn on TV"></a>
-      <p id="actual"></p>
+        <%= javascript_pack_tag 'my_js' %>
+        <div class="container jumbotron">
+          <a href="/choiceA" id="btn1"><input href="/choiceA" class="btn btn-light" id="button1" type="button" value="Turn on Kitchen Light"></a>
+          <p></p>
+          <a href="/choiceB" id="btn2" ><input href="/choiceA" class="btn btn-light" id="button2" type="button" value="Lock Front Door"></a>
+          <p></p>
+          <a href="/choiceC" id="btn3"><input href="/choiceA" class="btn btn-light" id="button3" type="button" value="Turn on Heater"></a>
+          <p></p>
+          <a href="/choiceD" id="btn4"><input href="/choiceA" class="btn btn-light" id="button4" type="button" value="Turn on TV"></a>
+          <p id="actual"></p>
+        </div>
       </center>
     </div>
   </body>
@@ -44,6 +46,7 @@
     var prev = 0;
     var diff = 0;
     var current = 0;
+    var newBlink = true;
     function myFunction() {
       console.log("here");
       count++;
@@ -67,9 +70,16 @@
 
     function reset(){
       console.log("reset");
-      document.getElementById("actual").innerHTML = "Final Choice: "+document.getElementById("button"+(((current-prev)-1)%4+1)).value;
-      document.getElementById("demo").innerHTML = "Simulating "+count+" blinks";
+      newBlink = true;
+      if(current!=prev){
+        document.getElementById("actual").innerHTML = "Final Choice: "+document.getElementById("button"+(((current-prev)-1)%4+1)).value;
+        // document.getElementById("demo").innerHTML = "Simulating "+count+" blinks";
+        location = document.getElementById("btn"+(((current-prev)-1)%4+1)).href;
+      }
       prev = current;
+
+      
+      
 
     }
 
@@ -102,38 +112,44 @@
     setInterval(function(){
      
      //TODO: uncomment for actual demo! 
-      // Rails.ajax({
-      //   url: "/pages",
-      //   type: "get",
-      //   data: "",
-      //   success: function(data) {console.log(data.blinks);
-      //     // console.log(prev);
-      //     current = data.blinks;
-
-      //     if(prev<current){
-         
-      //       // only start simulating button clicks if the user is starting to blink (initial refresh will yield a big diff between prev at 0 and current at 100+)
-      //       if((current-prev<10)){
-      //         for(i =1; i<=4; i++){
-      //           document.getElementById("button"+i).className = "btn btn-light";
-      //         }
+      Rails.ajax({
+        url: "/pages",
+        type: "get",
+        data: "",
+        success: function(data) {
+          // console.log(data.blinks);
+          // console.log(prev);
+          current = data.blinks;
+          console.log(prev+" " +current);
+          if(prev<current){
+            
+            // only start simulating button clicks if the user is starting to blink (initial refresh will yield a big diff between prev at 0 and current at 100+)
+            if((current-prev<10)){
+              for(i =1; i<=4; i++){
+                document.getElementById("button"+i).className = "btn btn-light";
+              }
                 
-      //         document.getElementById("button"+(((current-prev)-1)%4+1)).className = "btn btn-dark";
-      //       }else{
-      //         //know at least one diff because prev<current
-      //         prev = current-1;
-      //       }
-      //       // console.log("there was a diff");
-      //       if(current-prev == 1){
-      //         setTimeout(reset, 4200);
-      //       }
-      //     }
+              document.getElementById("button"+(((current-prev)-1)%4+1)).className = "btn btn-dark";
+              
+              console.log("it's a new set of blinks"+newBlink);
+              if(newBlink){
+                console.log("setting a reset");
+                newBlink = false;
+                setTimeout(reset, 4200);
+              }
+            }else{
+              //know at least one diff because prev<current
+              prev = current;
+            }
+            
+            
+          }
 
-      //     //get the button highlighted here
+          //get the button highlighted here
 
-      //   },
-      //   error: function(data) {console.log("this was an error");}
-      // })
+        },
+        error: function(data) {console.log("this was an error");}
+      })
      
       
     },1000); 
