adding the choice to go to a webpage

--- a/app/views/welcome/choiceA.html.erb
+++ b/app/views/welcome/choiceA.html.erb
@@ -28,8 +28,9 @@
         <h1>Choice A</h1>
 
         <%= javascript_pack_tag 'my_js' %>
+        <a href="/"><input class="btn btn-light" id="button1" type="button" value="2 blinks to go Back"></a>
         <div class="container jumbotron">
-          <a href="/"><input class="btn btn-light" id="button1" type="button" value="2 blinks to go Back"></a>
+          <embed src="https://hcie.csail.mit.edu/classes.html" style="width:100%; height:500px">
         </div>
       </center>
     </div>
