--- a/app/views/welcome/choiceA.html.erb
+++ b/app/views/welcome/choiceA.html.erb
@@ -30,7 +30,7 @@
         <%= javascript_pack_tag 'my_js' %>
         <a href="/"><input class="btn btn-light" id="button1" type="button" value="2 blinks to go Back"></a>
         <div class="container jumbotron">
-          <embed src="https://hcie.csail.mit.edu/classes.html" style="width:100%; height:500px">
+          <embed src="https://www.accuweather.com/en/us/cambridge/02139/weather-forecast/329319" style="width:100%; height:500px">
         </div>
       </center>
     </div>
