--- a/app/views/visuals/photos.html.erb
+++ b/app/views/visuals/photos.html.erb
@@ -1,7 +1,7 @@
 
 <html>
   <head>
-    <title>Choice B</title>
+    <title>Choice A</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,6 +11,12 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+    .mySlides {display:none;}
+</style>
   </head>
   <body>
    
@@ -25,18 +31,22 @@
     <div class="container jumbotron text-center">
       <center>
       
-        <h1>Emotions/Caretaking Requests</h1>
+        <h1>Photo Album</h1>
 
         <%= javascript_pack_tag 'my_js' %>
+        <a href="/visuals"><input class="btn btn-light" id="button1" type="button" value="2 blinks to go Back"></a>
         <div class="container jumbotron">
-          <a href="/" id = "btn1"><input class="btn btn-light" id="button1" type="button" value="I'm doing well!"></a>
-          <p></p>
-          <a href = "/" id="btn2"><input href="/visuals/weather" class="btn btn-light" id="button2" type="button" value="I'd like a cup of water"></a>
-          <p></p>
-          <a href="/" id="btn3" ><input href="/visuals/photos" class="btn btn-light" id="button3" type="button" value="I'd like a snack"></a>
-          <p id="actual"></p>
-          <a href = "/" id="btn4"><input href="/" class="btn btn-light" id="button4" type="button" value="Go Back"></a>
-          <p></p>
+          
+          <div  style="max-width:500px">
+    			  <img class="mySlides" src="/images/6810img1.jpg" style="width:100%">
+    			  <img class="mySlides" src="/images/6810img2.jpg" style="width:100%">
+    			  <img class="mySlides" src="/images/6810img3.jpg" style="width:100%">
+            <img class="mySlides" src="/images/6810img4.jpg" style="width:100%">
+            <img class="mySlides" src="/images/6810img5.jpg" style="width:100%">
+            <img class="mySlides" src="/images/6810img6.png" style="width:100%">
+            <img class="mySlides" src="/images/6810img7.png" style="width:100%">
+    			</div>
+
         </div>
       </center>
     </div>
@@ -49,30 +59,36 @@
     var current = 0;
     var newBlink = true;
 
-   function reset(){
+    function reset(){
       console.log("reset");
       newBlink = true;
       if(current!=prev){
-        
-        prev = current;
-        
-        //if going back
-        if((current-prev)>=4){
-          location='/';
-        }else{
-          document.getElementById("actual").innerHTML = "Mood: "+document.getElementById("button"+(((current-prev)-1)%3+1)).value;
-          document.body.style.backgroundColor = "red";
-        }
-        // document.getElementById("actual").innerHTML = "Simulating "+count+" blinks";
-        // location = document.getElementById("btn"+(((current-prev)-1)%3+1)).href;
-        
+        document.getElementById("actual").innerHTML = "Final Choice: "+document.getElementById("button"+(((current-prev)-1)%4+1)).value;
+        // document.getElementById("demo").innerHTML = "Simulating "+count+" blinks";
       }
-      
+      prev = current;
+      location = "/visuals/photos"  
+
     }
 
+
+    var myIndex = 0;
+    carousel();
+
+    function carousel() {
+      var i;
+      var x = document.getElementsByClassName("mySlides");
+      for (i = 0; i < x.length; i++) {
+        x[i].style.display = "none";  
+      }
+      myIndex++;
+      if (myIndex > x.length) {myIndex = 1}    
+      x[myIndex-1].style.display = "block";  
+      setTimeout(carousel, 2000); // Change image every 2 seconds
+    }
     // auto refresh 
     setInterval(function(){
-     document.body.style.backgroundColor = "white";
+     
      //TODO: uncomment for actual demo! 
       Rails.ajax({
         url: "/pages",
@@ -85,32 +101,25 @@
             
             // only start simulating button clicks if the user is starting to blink (initial refresh will yield a big diff between prev at 0 and current at 100+)
             if((current-prev<10)){
-              for(i =1; i<=4; i++){
-                document.getElementById("button"+i).className = "btn btn-light";
+              //group together 2 blinks
+              console.log(prev+" " +current);
+              if((current-prev)>=2){
+              	document.getElementById("button1").className = "btn btn-dark";
+              	location = '/visuals';
               }
-                
-              document.getElementById("button"+(((current-prev)-1)%4+1)).className = "btn btn-dark";
-              
-              console.log("it's a new set of blinks"+newBlink);
-              if(newBlink){
-                console.log("setting a reset");
-                newBlink = false;
-                setTimeout(reset, 4000);
+              else{
+              	prev = current;
               }
             }else{
-              //know at least one diff because prev<current
               prev = current;
             }
             
             
           }
-          //get the button highlighted here
         },
         error: function(data) {console.log("this was an error");}
       })
-     
-      
-    },1000); 
+    },1500); 
 
   </script>
 </html>
