--- a/app/views/visuals/photos.html.erb
+++ b/app/views/visuals/photos.html.erb
@@ -34,7 +34,7 @@
         <h1>Photo Album</h1>
 
         <%= javascript_pack_tag 'my_js' %>
-        <a href="/visuals"><input class="btn btn-light" id="button1" type="button" value="2 blinks to go Back"></a>
+        <p>Look left to go back</p>
         <div class="container jumbotron">
           
           <div  style="max-width:500px">
@@ -95,27 +95,41 @@
         type: "get",
         data: "",
         success: function(data) {
+          // new method
           current = data.blinks;
-          console.log(prev+" " +current);
-          if(prev<current){
-            
-            // only start simulating button clicks if the user is starting to blink (initial refresh will yield a big diff between prev at 0 and current at 100+)
-            if((current-prev<10)){
-              //group together 2 blinks
-              console.log(prev+" " +current);
-              if((current-prev)>=2){
-              	document.getElementById("button1").className = "btn btn-dark";
-              	location = '/visuals';
+          response = data.response;
+          console.log(prev+" " +current + " " +response);
+          // new method
+          if((current-prev)<5){ // randomly upper bound 5 blinks in a one second get command
+            if(current!=prev){
+              if(response === "left"){
+                location = "/visuals";
               }
-              else{
-              	prev = current;
-              }
-            }else{
-              prev = current;
             }
-            
-            
+            // document.getElementById("button"+((blinks)%4)).className = "btn btn-dark";
           }
+          prev = current;
+
+          // old method
+          // if(prev<current){
+            
+          //   // only start simulating button clicks if the user is starting to blink (initial refresh will yield a big diff between prev at 0 and current at 100+)
+          //   if((current-prev<10)){
+          //     //group together 2 blinks
+          //     console.log(prev+" " +current);
+          //     if((current-prev)>=2){
+          //     	document.getElementById("button1").className = "btn btn-dark";
+          //     	location = '/visuals';
+          //     }
+          //     else{
+          //     	prev = current;
+          //     }
+          //   }else{
+          //     prev = current;
+          //   }
+            
+            
+          // }
         },
         error: function(data) {console.log("this was an error");}
       })
