--- a/app/views/welcome/choiceB.html.erb
+++ b/app/views/welcome/choiceB.html.erb
@@ -29,13 +29,14 @@
 
         <%= javascript_pack_tag 'my_js' %>
         <div class="container jumbotron">
-          <a href="/" id = "btn1"><input class="btn btn-light" id="button1" type="button" value="I'm doing well!"></a>
+          <p>Look left to go back</p>
+          <a href="/" id = "btn0"><input class="btn btn-light" id="button0" type="button" value="I'm doing well!"></a>
           <p></p>
-          <a href = "/" id="btn2"><input href="/visuals/weather" class="btn btn-light" id="button2" type="button" value="I'd like a cup of water"></a>
+          <a href = "/" id="btn1"><input href="/visuals/weather" class="btn btn-light" id="button1" type="button" value="I'd like a cup of water"></a>
           <p></p>
-          <a href="/" id="btn3" ><input href="/visuals/photos" class="btn btn-light" id="button3" type="button" value="I'd like a snack"></a>
+          <a href="/" id="btn2" ><input href="/visuals/photos" class="btn btn-light" id="button2" type="button" value="I'd like a snack"></a>
           <p id="actual"></p>
-          <a href = "/" id="btn4"><input href="/" class="btn btn-light" id="button4" type="button" value="Go Back"></a>
+          <!-- <a href = "/" id="btn3"><input href="/" class="btn btn-light" id="button3" type="button" value="Go Back"></a> -->
           <p></p>
         </div>
       </center>
@@ -46,6 +47,7 @@
     var count= 0;
     var prev = 0;
     var diff = 0;
+    var blinks = 0;
     var current = 0;
     var newBlink = true;
 
@@ -54,8 +56,8 @@
       newBlink = true;
       if(current!=prev){
         
-        prev = current;
         
+
         //if going back
         if((current-prev)>=4){
           location='/';
@@ -63,6 +65,7 @@
           document.getElementById("actual").innerHTML = "Mood: "+document.getElementById("button"+(((current-prev)-1)%3+1)).value;
           document.body.style.backgroundColor = "red";
         }
+        prev = current;
         // document.getElementById("actual").innerHTML = "Simulating "+count+" blinks";
         // location = document.getElementById("btn"+(((current-prev)-1)%3+1)).href;
         
@@ -79,31 +82,56 @@
         type: "get",
         data: "",
         success: function(data) {
+
           current = data.blinks;
-          console.log(prev+" " +current);
-          if(prev<current){
-            
-            // only start simulating button clicks if the user is starting to blink (initial refresh will yield a big diff between prev at 0 and current at 100+)
-            if((current-prev<10)){
-              for(i =1; i<=4; i++){
+          response = data.response;
+          console.log(prev+" " +current + " " +response);
+          // new method
+          if((current-prev)<5){ // randomly upper bound 5 blinks in a one second get command
+            if(current!=prev){
+              if(response === "blink"){
+                blinks ++;
+              }
+              if(response === "right"){
+                document.getElementById("actual").innerHTML = "Mood: "+document.getElementById("button"+(blinks%3)).value;
+                document.body.style.backgroundColor = "red";
+              }
+              if(response === "left"){
+                location = '/';
+              }
+
+              for(i =0; i<=2; i++){
                 document.getElementById("button"+i).className = "btn btn-light";
               }
-                
-              document.getElementById("button"+(((current-prev)-1)%4+1)).className = "btn btn-dark";
-              
-              console.log("it's a new set of blinks"+newBlink);
-              if(newBlink){
-                console.log("setting a reset");
-                newBlink = false;
-                setTimeout(reset, 4000);
-              }
-            }else{
-              //know at least one diff because prev<current
-              prev = current;
             }
-            
-            
+            document.getElementById("button"+((blinks)%3)).className = "btn btn-dark";
           }
+          prev = current;
+
+          // old method 
+          // if(prev<current){
+            
+          //   // only start simulating button clicks if the user is starting to blink (initial refresh will yield a big diff between prev at 0 and current at 100+)
+          //   // if((current-prev<10)){
+          //   //   for(i =1; i<=4; i++){
+          //   //     document.getElementById("button"+i).className = "btn btn-light";
+          //   //   }
+                
+          //   //   document.getElementById("button"+(((current-prev)-1)%4+1)).className = "btn btn-dark";
+              
+          //   //   console.log("it's a new set of blinks"+newBlink);
+          //   //   if(newBlink){
+          //   //     console.log("setting a reset");
+          //   //     newBlink = false;
+          //   //     setTimeout(reset, 4000);
+          //   //   }
+          //   // }else{
+          //   //   //know at least one diff because prev<current
+          //   //   prev = current;
+          //   // }
+            
+            
+          // }
           //get the button highlighted here
         },
         error: function(data) {console.log("this was an error");}
